# poc_sync_c

./: .gitignore  CMakeLists.txt
sync/src/: client.c  play.c
